--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -15,5 +15,5 @@ a{
 /* 浏览器滚动条样式 */
 html{overflow-x: hidden;}
 html::-webkit-scrollbar {width: 6px;}
-html::-webkit-scrollbar-thumb {background-color: #ddd;border-radius: 3px;}
-html::-webkit-scrollbar-track{background-color: #fff;}
+html::-webkit-scrollbar-thumb {background-color: rgb(177, 175, 175);border-radius: 3px;}
+html::-webkit-scrollbar-track{background-color: #bdbdbd;}
