--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -14,6 +14,6 @@ a{
 
 /* 浏览器滚动条样式 */
 html{overflow-x: hidden;}
-html::-webkit-scrollbar {width: 6px;}
-html::-webkit-scrollbar-thumb {background-color: rgb(177, 175, 175);border-radius: 3px;}
+html::-webkit-scrollbar {width: 6px;border-radius: 4px;}
+html::-webkit-scrollbar-thumb {background-color: rgb(177, 175, 175);border-radius: 4px;}
 html::-webkit-scrollbar-track{background-color: #bdbdbd;}
