--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -12,8 +12,18 @@ a{
     text-decoration: none;
 }
 
+.el-menu--popup{
+    padding:0!important;
+}
+.asideMoon div.el-submenu__title:hover{
+    background-color: #2C2E2F!important;
+}
+.asideSunny div.el-submenu__title:hover{
+    background-color: #FFF!important;
+}
+
 /* 浏览器滚动条样式 */
 html{overflow-x: hidden;}
 html::-webkit-scrollbar {width: 6px;border-radius: 4px;}
 html::-webkit-scrollbar-thumb {background-color: rgb(177, 175, 175);border-radius: 4px;}
-html::-webkit-scrollbar-track{background-color: #bdbdbd;}
+html::-webkit-scrollbar-track{background-color: #F1F5F8;}
