--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -18,6 +18,6 @@ a{text-decoration: none;}
 }
 
 html{overflow-x: hidden;}
-html::-webkit-scrollbar {width: 6px;border-radius: 4px;}
-html::-webkit-scrollbar-thumb {background-color: rgb(177, 175, 175);border-radius: 4px;}
-html::-webkit-scrollbar-track{background-color: #F1F5F8;}
+html::-webkit-scrollbar {width: 5px;border-radius: 2px;}
+html::-webkit-scrollbar-thumb {background-color: rgb(177, 175, 175);border-radius: 2px;}
+html::-webkit-scrollbar-track{background-color: #FFF;}
